# zuckerli

./: CMakeLists.txt  README.md  run.sh
src/: ans.cc  ans.h  ans_test.cc  bit_reader.cc  bit_reader.h  bit_writer.cc  bit_writer.h  bits_test.cc  checksum.h  common.cc  common.h  common_test.cc  compressed_graph.cc  compressed_graph.h  context_model.h  decode.h  decode_main.cc  encode.cc  encode.h  encode_main.cc  entropy_coder_common_test.cc  flags.cc  huffman.cc  huffman.h  huffman_test.cc  integer_coder.h  roundtrip_test.cc  traversal_main.cc  traversal_main_compressed.cc  traversal_main_uncompressed.cc  uncompressed_graph.cc  uncompressed_graph.h  uncompressed_graph_test.cc
testdata/: small  testdata2  testdata3
